--- a/web_browser/passwd.html
+++ b/web_browser/passwd.html
@@ -10,7 +10,7 @@
         <div class="passwd">
             <label>Enter your email</label>
             <input type="text">
-            <button>Send</button>
+            <a href="New.html"><button>Send</button></a>
         </div>
     </container>
 </body>
